<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE" >

    <TextView
        android:text="@string/kazan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:paddingBottom="40dp"
        android:background="#FFF" />

    <TextView
        android:text="@string/kafed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textSize="13sp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_alignBottom="@+id/textView"
        android:background="#FFF" />

    <View
        android:layout_width="wrap_content"
        android:background="@drawable/shape_001"
        android:layout_height="3dp"
        android:layout_alignBottom="@+id/textView2" />

    <Button
        android:text="@string/test"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/button"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:onClick="onClick"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/dists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:layout_alignTop="@+id/button"
        android:textColor="#000" />

    <TextView
            android:text="@string/razr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:gravity="right"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignBottom="@+id/textView5" />

    <TextView
        android:text="@string/kgasu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:background="#FFF" />

    <View
        android:layout_width="wrap_content"
        android:background="@drawable/shape_001"
        android:layout_height="3dp"
        android:layout_alignTop="@+id/textView5" />

</RelativeLayout>